fixed text alignment on advanced search page

--- a/src/app/pages/advanced-search/advanced-search.page.scss
+++ b/src/app/pages/advanced-search/advanced-search.page.scss
@@ -49,7 +49,7 @@ ion-content {
 
 .choosenValue {
   display: inline-block;
-  float: left;
+  float: right;
   max-width: 70%;
   max-height: 22px;
   overflow: hidden;
